--- a/index.html
+++ b/index.html
@@ -2,28 +2,28 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <link rel="canonical" href="https://rappers-api-l2wq.onrender.com">
+    <meta name="description" content="Rappers api"/>
+    <meta name="keywords" content="Rappers api">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/site.webmanifest">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
     <title>Rappers API</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        /* Custom styles can be added here */
-        body {
-            padding: 20px;
-        }
-        .card {
-            margin-bottom: 20px;
-        }
-    </style>
 </head>
-<body>
+<body class="p-2">
     <div class="container">
         <h1 class="mt-5">Rappers API</h1>
-        
         <div class="row mt-4">
             <div class="col-md-6">
                 <h2>Example Response</h2>
-                <pre class="card p-3">
+                <pre class="card p-3 mb-2">
 {
     "21savage": {
         "id": 1,
